--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install Django==${{ matrix.django-version }}.*
           pip install djangorestframework>=3.12
-          pip install pytest
+          pip install pytest pytest-django
 
       - name: Run tests
         run: |
