--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,6 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        django-version: ["4.2", "5.0", "5.1", "5.2", "6.0"]
-        exclude:
-          - python-version: "3.10"
-            django-version: "6.0"
-          - python-version: "3.11"
-            django-version: "6.0"
-          - python-version: "3.13"
-            django-version: "4.2"
-          - python-version: "3.14"
-            django-version: "4.2"
 
     steps:
       - uses: actions/checkout@v3
@@ -34,13 +24,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install Django==${{ matrix.django-version }}.*
-          pip install djangorestframework>=3.12
-          pip install pytest pytest-django
+          pip install pytest
 
       - name: Run tests
         run: |
-          pytest tests/ -v
+          python -m pytest tests/ -v
 
   lint:
     runs-on: ubuntu-latest
